# boto3-ec2

./: README.md  pyproject.toml
src/: ec2.py  menu.py
