[project]
name = "ec2"
version = "0.1.0"
description = ""
authors = [
    {name = "engels",email = "engels.franca@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.38.32,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ec2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
